[gd_scene load_steps=5 format=3 uid="uid://dfob77al3r2l3"]

[ext_resource type="Script" uid="uid://ckotjxg6pcfyy" path="res://scripts/game.gd" id="1_lnu2h"]
[ext_resource type="PackedScene" uid="uid://cjfuyyu8dl486" path="res://scenes/player.tscn" id="1_yqjtg"]
[ext_resource type="PackedScene" uid="uid://ck8xgy356oeee" path="res://scenes/object.tscn" id="2_lnu2h"]
[ext_resource type="PackedScene" uid="uid://cbp7rkfxj7ph8" path="res://scenes/maps.tscn" id="4_lbhrr"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_lnu2h")

[node name="Player" parent="." instance=ExtResource("1_yqjtg")]
position = Vector2(603, 335)
scale = Vector2(0.5, 0.5)

[node name="StaticBody2D" parent="." instance=ExtResource("2_lnu2h")]
position = Vector2(177, 144)

[node name="StaticBody2D2" parent="." instance=ExtResource("2_lnu2h")]
position = Vector2(490, 414)

[node name="StaticBody2D3" parent="." instance=ExtResource("2_lnu2h")]
position = Vector2(894, 6)

[node name="StaticBody2D4" parent="." instance=ExtResource("2_lnu2h")]
position = Vector2(1056, 470)

[node name="StaticBody2D5" parent="." instance=ExtResource("2_lnu2h")]
position = Vector2(673, 664)

[node name="StaticBody2D6" parent="." instance=ExtResource("2_lnu2h")]
position = Vector2(-2, 579)

[node name="Maps" parent="." instance=ExtResource("4_lbhrr")]
show_behind_parent = true
top_level = false
